tdf#123043 make type character detection unicode-aware

Change-Id: I98886a7d13a43cc3202d45f96ceb5062f76f0784