basctl/source/basicide/baside2b.cxx
@@ -92,7 +92,7 @@ int const nScrollLine = 12;
 int const nScrollPage = 60;
 int const DWBORDER = 3;
 
-char const cSuffixes[] = "%&!#@$";
+OUString const cSuffixes {"%&!#@$"};
 
 } // namespace
 
@@ -166,13 +166,13 @@ void lcl_SeparateNameAndIndex( const OUString& rVName, OUString& rVar, OUString&
     if ( !rVar.isEmpty() )
     {
         sal_uInt16 nLastChar = rVar.getLength()-1;
-        if ( strchr( cSuffixes, rVar[ nLastChar ] ) )
+        if ( cSuffixes.indexOf(rVar[ nLastChar ] ) >= 0 )
             rVar = rVar.replaceAt( nLastChar, 1, "" );
     }
     if ( !rIndex.isEmpty() )
     {
         sal_uInt16 nLastChar = rIndex.getLength()-1;
-        if ( strchr( cSuffixes, rIndex[ nLastChar ] ) )
+        if ( cSuffixes.indexOf(rIndex[ nLastChar ] ) >=0 )
             rIndex = rIndex.replaceAt( nLastChar, 1, "" );
     }
 }
@@ -355,7 +355,7 @@ void EditorWindow::RequestHelp( const HelpEvent& rHEvt )
                 if ( !aWord.isEmpty() && !comphelper::string::isdigitAsciiString(aWord) )
                 {
                     sal_uInt16 nLastChar = aWord.getLength() - 1;
-                    if ( strchr( cSuffixes, aWord[ nLastChar ] ) )
+                    if ( cSuffixes.indexOf(aWord[ nLastChar ] ) >= 0 )
                         aWord = aWord.replaceAt( nLastChar, 1, "" );
                     SbxBase* pSBX = StarBASIC::FindSBXInCurrentScope( aWord );
                     if (SbxVariable const* pVar = IsSbxVariable(pSBX))
